feat: add bootstrap indepenses

--- a/viteDeploy/src/components/projects/project/project.module.css
+++ b/viteDeploy/src/components/projects/project/project.module.css
@@ -27,8 +27,13 @@ ul {
 li {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  flex-direction: column;
   margin-bottom: 5px;
+}
+.projectItem {
+  display: flex;
+  justify-content: space-between;
 }
 .forDell {
   margin-top: 5px;
