--- a/viteDeploy/src/components/projects/project/project.module.css
+++ b/viteDeploy/src/components/projects/project/project.module.css
@@ -149,3 +149,15 @@ textarea:hover {
   display: flex;
   justify-content: start;
 }
+
+.procMain {
+  width: 100%;
+  height: 5px;
+  display: flex;
+  justify-content: start;
+  border: 1px solid rgb(75, 75, 48);
+}
+.procItem {
+  width: 30%;
+  background-color: #f3ce96;
+}
