--- a/viteDeploy/src/components/projects/project/project.module.css
+++ b/viteDeploy/src/components/projects/project/project.module.css
@@ -158,6 +158,7 @@ textarea:hover {
   border: 1px solid rgb(75, 75, 48);
 }
 .procItem {
+  max-width: 100%;
   /* width: 30%; */
   background-color: #f3ce96;
 }
